--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercaki Coffe Bar - Links</title>
     <link rel="stylesheet" href="./index.css"/>
+    <script>
+      console.log("Hello");
+    </script>
   </head>
   <body>
     <main>
