Add blur transition animation

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercaki Coffe Bar - Links</title>
     <link rel="stylesheet" href="./index.css"/>
-    <script>
-      console.log("Hello");
+    <script>      
+    window.addEventListener('DOMContentLoaded', () => {
+      setTimeout( () => {
+        const main = document.querySelector("main");
+        main.style.opacity = 1;
+        main.style.filter = 'blur(0px)';
+      },10)
+    });
+      
     </script>
   </head>
   <body>
     <main>
-
     <header>
       <img src="./images/meraki.jpg" alt="logo de meraki">
       <h1>@meraki_zaruma</h1>
@@ -30,7 +36,7 @@
         </a>
       </li>
       <li>
-        <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fgoo.gl%2Fmaps%2FuWfmUnq4Ae3MFyBe8&h=AT0Kb50-8k6ZxCOifm4pb2r_VaaZ-DIyW4BKuVufInnCRcCm6tjLpHLp-YlT_PntttezLPQGOglHiFdQyHE8r5q9tuYGiUf-PepzoQmcG8ydHglX1X_idyk3ZgbGakY68c1cYABseEI8HA">
+        <a href="https://maps.app.goo.gl/tsUyTqER4XxBEJJz9">
           <img src="./images/bxs-location-plus.svg" alt="Ubicacion de nuestro local" width="24">
           Ubicacion
         </a>
