--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercaki Coffe Bar - Links</title>
+    <title>Meraki Coffe Bar - Links</title>
     <link rel="stylesheet" href="./index.css"/>
     <script>      
     window.addEventListener('DOMContentLoaded', () => {
