perf: Refactor about lighthouse test

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Links-tree for Meraki Coffe Bar, @meraki-zaruma, Author: Richard Palacios G">
     <title>Meraki Coffe Bar - Links</title>
     <link rel="stylesheet" href="./index.css"/>
     <script>      
@@ -25,31 +26,31 @@
     <ul>
       <li>
         <a href="https://www.canva.com/design/DAFiocxDw1I/TYXaFt5ABs4SX4zEgF9asA/edit?utm_content=DAFiocxDw1I&utm_campaign=designshare&utm_medium=link2&utm_source=sharebuttonp">
-          <img src="./images/bxs-food-menu.svg" alt="Menu platillos" width="24">
+          <img src="./images/bxs-food-menu.svg" alt="Menu platillos" width="24" height="24">
           Menu
         </a>
       </li>
       <li>
         <a href="https://wa.me/593959573273/">
-          <img src="./images/bxl-whatsapp.svg" alt="Whatsapp" width="24">
+          <img src="./images/bxl-whatsapp.svg" alt="Whatsapp" width="24" height="24">
           Whatsapp
         </a>
       </li>
       <li>
         <a href="https://maps.app.goo.gl/tsUyTqER4XxBEJJz9">
-          <img src="./images/bxs-location-plus.svg" alt="Ubicacion de nuestro local" width="24">
+          <img src="./images/bxs-location-plus.svg" alt="Ubicacion de nuestro local" width="24" height="24">
           Ubicacion
         </a>
       </li>
       <li>
         <a href="https://www.facebook.com/meraki.za.ec">
-          <img src="./images/bxl-facebook.svg" alt="Pagina de Facebook de Meraki" width="24">
+          <img src="./images/bxl-facebook.svg" alt="Pagina de Facebook de Meraki" width="24" height="24">
           Facebook
         </a>
       </li>
       <li>
         <a href="https://instagram.com/meraki_zaruma?igshid=MzRlODBiNWFlZA==">
-          <img src="./images/bxl-instagram-alt.svg" alt="Perfil de Instagram Meraki" width="24">
+          <img src="./images/bxl-instagram-alt.svg" alt="Perfil de Instagram Meraki" width="24" height="24">
           Instagram
         </a>
       </li>
