style: minimize html and css

--- a/index.html
+++ b/index.html
@@ -1,61 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="Links-tree for Meraki Coffe Bar, @meraki-zaruma, Author: Richard Palacios G">
-  <title>Meraki Coffe Bar - Links</title>
-  <link rel="stylesheet" href="./index.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-  <script>window.addEventListener('DOMContentLoaded', () => {
-      VANTA.BIRDS({
-        el: "#vanta",
-        mouseControls: true,
-        touchControls: true,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 3.00,
-        scaleMobile: 2.00,
-        color1: 0xdc5d18,
-        color2: 0xdc2edc,
-        birdSize: 1.0,
-        wingSpan: 28.00,
-        quantity: 2.00,
-        backgroundAlpha: 0.00
-      })
-      setTimeout(() => {
-        const main = document.querySelector("main");
-        main.style.opacity = 1;
-        main.style.filter = 'blur(0px)';
-      }, 10)
-    });</script>
-</head>
-
-<body >
-  <div id="vanta">
-  <main>
-    <header><img src="./images/meraki.jpg" alt="logo de meraki">
-      <h1>@meraki_zaruma</h1>
-    </header>
-    <ul>
-      <li><a
-          href="https://www.canva.com/design/DAFiocxDw1I/TYXaFt5ABs4SX4zEgF9asA/edit?utm_content=DAFiocxDw1I&utm_campaign=designshare&utm_medium=link2&utm_source=sharebuttonp"><img
-            src="./images/bxs-food-menu.svg" alt="Menu platillos" width="24" height="24"> Menu</a></li>
-      <li><a href="https://wa.me/593959573273/"><img src="./images/bxl-whatsapp.svg" alt="Whatsapp" width="24"
-            height="24"> Whatsapp</a></li>
-      <li><a href="https://maps.app.goo.gl/tsUyTqER4XxBEJJz9"><img src="./images/bxs-location-plus.svg"
-            alt="Ubicacion de nuestro local" width="24" height="24"> Ubicacion</a></li>
-      <li><a href="https://www.facebook.com/meraki.za.ec"><img src="./images/bxl-facebook.svg"
-            alt="Pagina de Facebook de Meraki" width="24" height="24"> Facebook</a></li>
-      <li><a href="https://instagram.com/meraki_zaruma?igshid=MzRlODBiNWFlZA=="><img
-            src="./images/bxl-instagram-alt.svg" alt="Perfil de Instagram Meraki" width="24" height="24"> Instagram</a>
-      </li>
-    </ul>
-  </main>
-  </div>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="es"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Links-tree for Meraki Coffe Bar, @meraki-zaruma, Author: Richard Palacios G"><title>Meraki Coffe Bar - Links</title><link rel="stylesheet" href="./index.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script><script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script><script>window.addEventListener('DOMContentLoaded',()=>{VANTA.BIRDS({el: "#vanta",mouseControls: true,touchControls: true,gyroControls: false,minHeight: 200.00,minWidth: 200.00,scale: 3.00,scaleMobile: 2.00,color1: 0xdc5d18,color2: 0xdc2edc,birdSize: 1.0,wingSpan: 28.00,quantity: 2.00,backgroundAlpha: 0.00});setTimeout(() => {const main = document.querySelector("main");main.style.opacity = 1;main.style.filter = 'blur(0px)';}, 10);});</script></head><body><div id="vanta"><main><header><img src="./images/meraki.jpg" alt="logo de meraki"><h1>@meraki_zaruma</h1></header><ul><li><a href="https://www.canva.com/design/DAFiocxDw1I/TYXaFt5ABs4SX4zEgF9asA/edit?utm_content=DAFiocxDw1I&utm_campaign=designshare&utm_medium=link2&utm_source=sharebuttonp"><img src="./images/bxs-food-menu.svg" alt="Menu platillos" width="24" height="24"> Menu</a></li><li><a href="https://wa.me/593959573273/"><img src="./images/bxl-whatsapp.svg" alt="Whatsapp" width="24" height="24"> Whatsapp</a></li><li><a href="https://maps.app.goo.gl/tsUyTqER4XxBEJJz9"><img src="./images/bxs-location-plus.svg" alt="Ubicacion de nuestro local" width="24" height="24"> Ubicacion</a></li><li><a href="https://www.facebook.com/meraki.za.ec"><img src="./images/bxl-facebook.svg" alt="Pagina de Facebook de Meraki" width="24" height="24"> Facebook</a></li><li><a href="https://instagram.com/meraki_zaruma?igshid=MzRlODBiNWFlZA=="><img src="./images/bxl-instagram-alt.svg" alt="Perfil de Instagram Meraki" width="24" height="24"> Instagram</a></li></ul></main></div></body></html>
